--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 <body>
 
+<div id="Container">
+
     <!-- Header -->
 
     <header>
-        <img src="./logo.png" alt="Logo.png">
-        <strong>gmail</strong>
+        <img src="./logo.png" alt="Logo.png" class="Logo">
+        <strong>GMAIL</strong>
     </header>
 
     <hr>
@@ -28,29 +30,46 @@
 
     <!-- Main -->
 
+    <!-- Prima Parte -->
+
     <main>
-        <input type="text" placeholder="Search"> 
-        <button type="button">VAI</button>
+        <input type="text" placeholder="Search" id="cerca"> 
+        <button type="button" id="vai">VAI</button>
 
-        <p> Ci sono <span>30</span> messaggi</p>
-    </main>
-
-    <hr>
-  
-    <input type="checkbox"> ★ Oggetto della Mail - testo della mail
-    <input type="checkbox"> ★ Oggetto della Mail - testo della mail
-    <input type="checkbox"> ★ Oggetto della Mail - testo della mail
-    <input type="checkbox"> ★ Oggetto della Mail - testo della mail
-    <input type="checkbox"> ★ Oggetto della Mail - testo della mail
+        <p> Ci sono <span id="thirty">30</span> messaggi</p>
 
     <hr>
-    
+
+    <!-- Seconda Parte - Checkboxes -->
+
+    <div>
+        <input type="checkbox" class="checkbox"> <label><strong><span id="star">★</span> Oggetto della Mail -</strong> testo della mail</label>
+    </div>
+    <div class="no-bg">
+        <input type="checkbox" class="checkbox"> <label><strong>★ Oggetto della Mail -</strong> testo della mail</label>
+    </div>
+    <div>
+        <input type="checkbox" class="checkbox"> <label><strong>★ Oggetto della Mail -</strong> testo della mail</label>
+    </div>
+    <div>
+        <input type="checkbox" class="checkbox"> <label><strong>★ Oggetto della Mail -</strong> testo della mail</label>
+    </div>
+    <div>
+        <input type="checkbox" class="checkbox"> <label><strong>★ Oggetto della Mail -</strong> testo della mail</label>
+    </div>
+
+</main>
+
+    <hr>
+
 
     <!-- Footer -->
 
     <footer>
-        <h4>powered by <strong>workfully</strong></h4>
+        <p>powered by <strong>workfully</strong></p>
     </footer>
+
+</div>
     
 </body>
 
